[#1085] Document conservative incremental default on JDK < 23
When `proc` is unset, `javac` enables annotation processing by default before
Java 23 (`-proc:full`) and discovers processors on the compile classpath. The
plugin therefore conservatively assumes a processor may be present and applies
`rebuild-on-add,rebuild-on-change` by default, doing a full rebuild on any
change even when no processor is actually present.

This behaviour is intentional (a partial recompile can lose processor-generated
state); document it in the incrementalCompilation default-value javadoc, and
note that Java < 23 users with no annotation processor can restore per-file
recompilation by setting `proc` to `none` or an explicit `incrementalCompilation`.